--- a/content/blogpost/post11.html
+++ b/content/blogpost/post11.html
@@ -2,7 +2,7 @@
 <p>Posted by SPOTCO on May 2014</p>
 <hr/>
 <p>
-	Entered the <a href="http://www.ludumdare.com/compo/">Ludum Dare 29</a> (theme: Beneath the Surface) with my game, <a href="http://spotco.itch.io/window-cleaner---the-love-story">Maniac Pengmaku!</a>.
+	Entered the <a href="http://www.ludumdare.com/compo/">Ludum Dare 29</a> (theme: Beneath the Surface) with my game, <a href="http://spotcos.com/penguin">Maniac Pengmaku!</a>.
 	<br/>
 	<a href="http://spotcos.com/penguin">
 		<img src="content/projectsimg/banner/pengmaku_banner.png" style="margin:15px;" class="img-polaroid" />
@@ -22,7 +22,7 @@
 		<div class="span6">
 			<h2><a href="http://www.ludumdare.com/compo/ludum-dare-29/?action=preview&uid=25252">Hanoka</a></h2>
 			<p>
-	<b>Liked:</b> By far and away my favorite out of all that I played. So much ambition (and polish) for a 48 hour game, and executed super well. Highlights are the RPG-esque upgrade system (that keep you interested for the whole game), and really amazing graphics &amp; animations. Also the voice acting is super cute, I gotta get more of that in my games :)<br/>
+		<b>Liked:</b> By far and away my favorite out of all that I played. It had a whole lot of ambition for a 48 hour game, but was executed incredibly  well. Highlights are the RPG-esque upgrade system (that keep you interested for the whole game), and really amazing graphics &amp; animations. Also the voice acting is super cute, I gotta get more of that in my games :)<br/>
 	<b>Disliked:</b> Starts off (before you have all your upgrades) pretty slow and a little frustrating. You'll need to grind a bit before taking on the first boss, then your powerlevel snowballs from there. My first run took around 30-40mins (which is huge for a gamejam game), but really wish there was more of it!
 			</p>
 		</div>
@@ -35,7 +35,7 @@
 		<div class="span6">
 			<h2><a href="http://www.ludumdare.com/compo/ludum-dare-29/?action=preview&uid=35873">We Grow</a></h2>
 			<p>
-	<b>Liked:</b> Like Pikmin, but super simplified (with blocky canvas.drawrect graphics). Super creative idea, and pretty fun to play. Ending also makes me cry errytime.<br/>
+	<b>Liked:</b> Like Pikmin, but really simplified (with blocky canvas.drawrect graphics). Creative idea, and pretty fun to play. Ending also makes me cry errytime.<br/>
 <b>Disliked:</b> Not too challenging (your pikmins never stop spawning) and pretty short. But, it WAS a gamejam game so that last bit can be forgiven.
 			</p>
 		</div>
