site major update

--- a/content/blogpost/post10.html
+++ b/content/blogpost/post10.html
@@ -1,6 +1,11 @@
 <h1>Cyberpunk Game Jam 2014</h1>
 <p>Posted by SPOTCO on Mar 2014</p>
 <hr/>
+<style>
+.span2 {
+	width: 180px !important;
+}
+</style>
 <p>
 	Entered the <a href="http://itch.io/jam/cyberpunk-jam">Cyberpunk Game Jam</a> with our game, <a href="http://spotco.itch.io/window-cleaner---the-love-story">Window Cleaner - A Tale of Two Gangs</a>.
 
