--- a/content/blogpost/post11.html
+++ b/content/blogpost/post11.html
@@ -1,5 +1,10 @@
 <h1>Ludum Dare 2014</h1>
 <p>Posted by SPOTCO on May 2014</p>
+<style>
+.span2 {
+	width: 180px !important;
+}
+</style>
 <hr/>
 <p>
 	Entered the <a href="http://www.ludumdare.com/compo/">Ludum Dare 29</a> (theme: Beneath the Surface) with my game, <a href="http://spotco.itch.io/window-cleaner---the-love-story">Maniac Pengmaku!</a>.
